# Project3-Python

./: marker_publisher.py  person_tracker.py
archive/: lidar_processor.py  utils.py
install/: local_setup.sh  setup.sh
install/project3/lib/project3/: lidar_processor  marker_publisher  person_tracker
install/project3/share/project3/: package.dsv  package.ps1  package.sh  package.xml
install/project3_interfaces/share/project3_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/project3_interfaces/share/project3_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_project3_interfaces__rosidl_generator_cExport-noconfig.cmake  export_project3_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_project3_interfaces__rosidl_generator_pyExport.cmake  export_project3_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_project3_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  project3_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  project3_interfaces__rosidl_typesupport_cppExport.cmake  project3_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  project3_interfaces__rosidl_typesupport_introspection_cExport.cmake  (+1 more)
log/: latest_build
project3-bags/01/: metadata.yaml
src/project3/: package.xml  setup.py
src/project3/install/: local_setup.sh  setup.sh
src/project3/log/: latest_build
src/project3/project3/: person_tracker.py
src/project3_interfaces/: CMakeLists.txt
src/project3_interfaces/msg/: PersonCandidates.msg
(+29 files in other folders)
